--- a/style.css
+++ b/style.css
@@ -8,6 +8,12 @@ body{
 h1{
     text-align: center;
 }
+#level img{
+    width: 25%;
+    margin-left: 6.25%;
+    height: 300px;
+    margin-top: 100px;
+}
 
 /**************/
     /*Game*/
