--- a/style.css
+++ b/style.css
@@ -83,3 +83,13 @@ input#submit:hover {
     margin-right: 4%; 
 }
 /*/credits*/
+
+/**************/
+  /*Controls*/
+/**************/
+
+.controls {
+    font-family: 'Pangolin', cursive;
+    color: white;
+    text-align: center;
+}
