--- a/style.css
+++ b/style.css
@@ -19,6 +19,9 @@ h1{
 /**************/
     /*Game*/
 /**************/
+@keyframes animatedBackground {
+    to { background-position-x: 99999999%; }
+}
 
 #test{
     margin-top: 5%;
@@ -70,10 +73,7 @@ input#submit:hover {
     opacity: 0.5;
 }
 
-<<<<<<< HEAD
 
-
-=======
 input#leaderboard {
     height: 40px;
     margin-top: 20px;
@@ -86,7 +86,6 @@ input#leaderboard:hover {
     background-color: rgb(68,68,68);
     opacity: 0.5;
 }
->>>>>>> b8adee2253f08af18c21e3563f10be87a11145f3
 /*/game*/
 
 /**************/
